# geometry_lib

./: README.md  pyproject.toml
src/geometry/: __init__.py  circle.py  identifier.py  shape.py  triangle.py
tests/: test_circle.py  test_identifier.py  test_triangle.py
